--- a/angular.json
+++ b/angular.json
@@ -48,6 +48,7 @@
                         "styles": [
                             "src/styles.css",
                             "node_modules/bootstrap/dist/css/bootstrap.min.css",
+                            "node_modules/toastr/build/toastr.min.css",
                             "node_modules/mdbootstrap/css/addons/datatables.min.css",
                             "node_modules/chart.js/dist/Chart.min.css",
                             "node_modules/datatables.net-dt/css/jquery.dataTables.css"
