--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sicar-front-end",
   "version": "0.0.0",
   "scripts": {
-    "heroku-postbuild": "ng build -prod",
+    "heroku-postbuild": "ng build --prod",
     "ng": "ng",
     "start": "node server.js",
     "build": "ng build",
